--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Run the action on this runner with nvcc subpackage only
-        uses: Jimver/cuda-toolkit@latest
+        uses: Jimver/cuda-toolkit@v0.2.8
         with:
           method: network
           sub-packages: '["nvcc"]'
