--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,47 +17,36 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install CUDA with just nvcc
+      - name: Linux - Install CUDA with just nvcc
         if: runner.os == 'Linux'
         uses: Jimver/cuda-toolkit@v0.2.8
         with:
           method: network
           sub-packages: '["nvcc"]'
 
-      - name: Install CUDA with nvcc and MSVC Integration
+      - name: Windows - Install CUDA with nvcc and MSVC Integration
         if: runner.os == 'Windows'
         uses: Jimver/cuda-toolkit@v0.2.8
         with:
-          method: network
+          method: local
           sub-packages: '["nvcc", "visual_studio_integration"]'
           use-github-cache: false
 
       - name: Test if nvcc is available
         run: nvcc -V
 
-      #- name: List paths (windows)
-      #  if: runner.os == 'Windows'
-      #  shell: powershell
-      #  run: |
-      #    ls $env:CUDA_PATH
-      #    ls $env:CUDA_PATH\bin
-      #    ls $env:CUDA_PATH\include
-      #- name: List paths (linux)
-      #  if: runner.os == 'Linux'
-      #  run: |
-      #    ls $CUDA_PATH
-      #    ls $CUDA_PATH/bin
-      #    ls $CUDA_PATH/include
-
       - name: Build Binary
         run: nvcc -o matmul_cuda matmul_cuda.cu -O 3 -arch=all --extra-device-vectorization
 
-      - uses: actions/upload-artifact@v3
+      - name: Windows - Upload Build
+        uses: actions/upload-artifact@v3
         if: runner.os == 'Windows'
         with:
           name: matmul_cuda
           path: ./matmul_cuda.exe
-      - uses: actions/upload-artifact@v3
+
+      - name: Linux - Upload Build
+        uses: actions/upload-artifact@v3
         if: runner.os == 'Linux'
         with:
           name: matmul_cuda
