--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,20 @@ jobs:
       #    export LD_LIBRARY_PATH=/usr/local/cuda-11.0/targets/x86_64-linux/lib:$LD_LIBRARY_PATH
       #    export PATH=/usr/local/cuda-11.0/bin:$PATH
 
+      - name: List paths (windows)
+        if: runner.os == 'Windows'
+        shell: powershell
+        run: |
+          ls $env:CUDA_PATH
+          ls $env:CUDA_PATH\bin
+          ls $env:CUDA_PATH\include
+      - name: List paths (linux)
+        if: runner.os == 'Linux'
+        run: |
+          ls $CUDA_PATH
+          ls $CUDA_PATH/bin
+          ls $CUDA_PATH/include
+
       - name: Test if nvcc is available
         run: nvcc -V
 
