--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,9 @@ jobs:
         if: runner.os == 'Windows'
         #shell: powershell
         run: |
-          ls C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\
-          ls C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\
-          ls C:\Program Files (x86)\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\
+          ls "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\"
+          ls "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\"
+          ls "C:\Program Files (x86)\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\"
 
       - uses: actions/checkout@v3
 
