--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,19 +23,7 @@ jobs:
         if: runner.os == 'Windows'
         #shell: powershell
         run: |
-          echo %VCVARS_FILE%
-
-      - name: List paths (windows)
-        if: runner.os == 'Windows'
-        #shell: powershell
-        run: |
-          ls $env:VCVARS_FILE
-
-      - name: List paths (windows)
-        if: runner.os == 'Windows'
-        #shell: powershell
-        run: |
-          ls %VCVARS_FILE%\..\..\..\Tools\MSVC\
+          ls %VCVARS_FILE%\burp
 
       - name: List paths (windows)
         if: runner.os == 'Windows'
