Reset build script

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,37 +15,11 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      #- name: Windows - Enable CL.exe
-      #  if: runner.os == 'Windows'
-      #  uses: ilammy/msvc-dev-cmd@v1
-
-      - run: echo "${{ env.VCVARS_FILE }}"
-
-      - name: List paths (windows)
+      - name: Windows - Enable CL.exe
         if: runner.os == 'Windows'
-        #shell: powershell
-        run: |
-          ls $env:VCVARS_FILE\burp
+        uses: ilammy/msvc-dev-cmd@v1
 
-      - name: List paths (windows)
-        if: runner.os == 'Windows'
-        #shell: powershell
-        run: |
-          ls $env:VCVARS_FILE
-
-      - name: List paths (windows)
-        if: runner.os == 'Windows'
-        #shell: powershell
-        run: |
-          ls $env:VCVARS_FILE\burp
-
-      - name: List paths (windows)
-        if: runner.os == 'Windows'
-        #shell: powershell
-        run: |
-          ls "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\"
-          ls "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\"
-          ls "C:\Program Files (x86)\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\"
+      # Try printing %VCVARS_FILE%\..\..\..\Tools\MSVC\ to eventually get to cl.exe
 
       - uses: actions/checkout@v3
 
