--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
       #  uses: ilammy/msvc-dev-cmd@v1
 
       # Try printing %VCVARS_FILE%\..\..\..\Tools\MSVC\ to eventually get to cl.exe
-      #- name: List paths (windows)
-      #  if: runner.os == 'Windows'
-      #  shell: cmd
-      #  run: ls "%VCToolsInstallDir%\bin\Hostx64\x64"
+      - name: List paths (windows)
+        if: runner.os == 'Windows'
+        shell: cmd
+        run: ls "${{ env.VCToolsInstallDir }}\bin\Hostx64\x64"
 
       - uses: actions/checkout@v3
 
@@ -72,7 +72,7 @@ jobs:
         if: runner.os == 'Windows'
         shell: cmd
         #run: nvcc -o matmul_cuda matmul_cuda.cu -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.32.31326\bin\HostX64\x64" -O 3 -arch=all --extra-device-vectorization
-        run: nvcc -o matmul_cuda matmul_cuda.cu -ccbin "%VCToolsInstallDir%\bin\Hostx64\x64" -O 3 -arch=all --extra-device-vectorization
+        run: nvcc -o matmul_cuda matmul_cuda.cu -ccbin "${{ env.VCToolsInstallDir }}\bin\Hostx64\x64" -O 3 -arch=all --extra-device-vectorization
 
       - name: Windows - Upload Build
         uses: actions/upload-artifact@v3
