--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,12 @@ jobs:
       #  if: runner.os == 'Windows'
       #  uses: ilammy/msvc-dev-cmd@v1
 
-      # Try printing %VCVARS_FILE%\..\..\..\Tools\MSVC\ to eventually get to cl.exe
-      - name: List paths (windows)
+      # Current cl.exe is at C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.32.31326\bin\HostX64\x64
+      - name: Windows - List Versions of MSVC
         if: runner.os == 'Windows'
         #shell: cmd
         run: |
-          echo "VCToolsInstallDir=$VCToolsInstallDir" >> $env:VCToolsInstallDir
-          ls $env:VCToolsInstallDir
-          ls ${{env.VCToolsInstallDir}}
+          ls "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\"
 
       - uses: actions/checkout@v3
 
@@ -74,8 +72,8 @@ jobs:
       - name: Windows - Build Binary
         if: runner.os == 'Windows'
         #shell: cmd
-        #run: nvcc -o matmul_cuda matmul_cuda.cu -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.32.31326\bin\HostX64\x64" -O 3 -arch=all --extra-device-vectorization
-        run: nvcc -o matmul_cuda matmul_cuda.cu -ccbin "$env:VCToolsInstallDir\bin\Hostx64\x64" -O 3 -arch=all --extra-device-vectorization
+        run: nvcc -o matmul_cuda matmul_cuda.cu -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.32.31326\bin\HostX64\x64" -O 3 -arch=all --extra-device-vectorization
+        #run: nvcc -o matmul_cuda matmul_cuda.cu -ccbin "$env:VCToolsInstallDir\bin\Hostx64\x64" -O 3 -arch=all --extra-device-vectorization
 
       - name: Windows - Upload Build
         uses: actions/upload-artifact@v3
