--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,6 @@ name: Build Binary
 on:
   push:
     branches: [main]
-  #pull_request:
-  #workflow_dispatch:
 
 jobs:
   Build:
@@ -15,10 +13,6 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      #- name: Windows - Enable CL.exe
-      #  if: runner.os == 'Windows'
-      #  uses: ilammy/msvc-dev-cmd@v1
-
       # Current cl.exe is at C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.32.31326\bin\HostX64\x64
       - name: Windows - List Versions of MSVC
         if: runner.os == 'Windows'
@@ -40,30 +34,7 @@ jobs:
         uses: Jimver/cuda-toolkit@v0.2.8
         with:
           method: local
-          #sub-packages: '["nvcc", "visual_studio_integration", "cudart"]'
-
-      #- name: Windows - Add CUDA Paths
-      #  run: |
-      #    export CPATH=/usr/local/cuda-11.0/targets/x86_64-linux/include:$CPATH
-      #    export LD_LIBRARY_PATH=/usr/local/cuda-11.0/targets/x86_64-linux/lib:$LD_LIBRARY_PATH
-      #    export PATH=/usr/local/cuda-11.0/bin:$PATH
-
-      - name: List paths (windows)
-        if: runner.os == 'Windows'
-        shell: powershell
-        run: |
-          ls $env:CUDA_PATH
-          ls $env:CUDA_PATH\bin
-          ls $env:CUDA_PATH\include
-      - name: List paths (linux)
-        if: runner.os == 'Linux'
-        run: |
-          ls $CUDA_PATH
-          ls $CUDA_PATH/bin
-          ls $CUDA_PATH/include
-
-      - name: Test if nvcc is available
-        run: nvcc -V
+          sub-packages: '["nvcc", "visual_studio_integration", "cudart"]'
 
       - name: Linux - Build Binary
         if: runner.os == 'Linux'
@@ -71,7 +42,6 @@ jobs:
 
       - name: Windows - Build Binary
         if: runner.os == 'Windows'
-        #shell: cmd
         run: nvcc -o matmul_cuda matmul_cuda.cu -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.32.31326\bin\HostX64\x64" -O 3 -arch=all --extra-device-vectorization
         #run: nvcc -o matmul_cuda matmul_cuda.cu -ccbin "$env:VCToolsInstallDir\bin\Hostx64\x64" -O 3 -arch=all --extra-device-vectorization
 
@@ -79,12 +49,30 @@ jobs:
         uses: actions/upload-artifact@v3
         if: runner.os == 'Windows'
         with:
-          name: matmul_cuda
+          name: matmul_cuda_windows
           path: ./matmul_cuda.exe
 
       - name: Linux - Upload Build
         uses: actions/upload-artifact@v3
         if: runner.os == 'Linux'
         with:
-          name: matmul_cuda
+          name: matmul_cuda_linux
           path: ./matmul_cuda
+
+  Release:
+    name: "Pre Release"
+    runs-on: "ubuntu-latest"
+
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+
+      - name: Create a Release
+        uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Development Build"
+          files: |
+            matmul_cuda_*.zip
