--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,7 @@ jobs:
   Release:
     name: "Pre Release"
     runs-on: "ubuntu-latest"
+    needs: Build
 
     steps:
       - name: Download artifacts
