Upload the artifacts properly?

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,4 +76,4 @@ jobs:
           prerelease: true
           title: "Development Build"
           files: |
-            matmul_cuda_*.zip
+            matmul_cuda*
