--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,12 +38,12 @@ jobs:
 
       - name: Linux - Build Binary
         if: runner.os == 'Linux'
-        run: nvcc -o matmul_cuda matmul_cuda.cu -O 3 -arch=all --extra-device-vectorization
+        run: nvcc -o matmul_cuda_linux matmul_cuda.cu -O 3 -arch=all --extra-device-vectorization
 
       #- name: Windows - Build Binary
       #  if: runner.os == 'Windows'
-      #  run: nvcc -o matmul_cuda matmul_cuda.cu -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.32.31326\bin\HostX64\x64" -O 3 -arch=all --extra-device-vectorization
-      #  #run: nvcc -o matmul_cuda matmul_cuda.cu -ccbin "$env:VCToolsInstallDir\bin\Hostx64\x64" -O 3 -arch=all --extra-device-vectorization
+      #  run: nvcc -o matmul_cuda_windows matmul_cuda.cu -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.32.31326\bin\HostX64\x64" -O 3 -arch=all --extra-device-vectorization
+      #  #run: nvcc -o matmul_cuda_windows matmul_cuda.cu -ccbin "$env:VCToolsInstallDir\bin\Hostx64\x64" -O 3 -arch=all --extra-device-vectorization
 
       - name: Windows - Fake Build Binary
         if: runner.os == 'Windows'
@@ -54,14 +54,14 @@ jobs:
         if: runner.os == 'Windows'
         with:
           name: matmul_cuda_windows
-          path: ./matmul_cuda.exe
+          path: ./matmul_cuda_windows.exe
 
       - name: Linux - Upload Build
         uses: actions/upload-artifact@v3
         if: runner.os == 'Linux'
         with:
           name: matmul_cuda_linux
-          path: ./matmul_cuda
+          path: ./matmul_cuda_linux
 
   Release:
     name: "Pre Release"
