--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,25 +29,21 @@ jobs:
           method: network
           sub-packages: '["nvcc"]'
 
-      #- name: Windows - Install CUDA with nvcc and MSVC Integration
-      #  if: runner.os == 'Windows'
-      #  uses: Jimver/cuda-toolkit@v0.2.8
-      #  with:
-      #    method: local
-      #    sub-packages: '["nvcc", "visual_studio_integration", "cudart"]'
+      - name: Windows - Install CUDA with nvcc and MSVC Integration
+        if: runner.os == 'Windows'
+        uses: Jimver/cuda-toolkit@v0.2.8
+        with:
+          method: local
+          sub-packages: '["nvcc", "visual_studio_integration", "cudart"]'
 
       - name: Linux - Build Binary
         if: runner.os == 'Linux'
         run: nvcc -o matmul_cuda_linux matmul_cuda.cu -O 3 -arch=all --extra-device-vectorization
 
-      #- name: Windows - Build Binary
-      #  if: runner.os == 'Windows'
-      #  run: nvcc -o matmul_cuda_windows matmul_cuda.cu -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.32.31326\bin\HostX64\x64" -O 3 -arch=all --extra-device-vectorization
-      #  #run: nvcc -o matmul_cuda_windows matmul_cuda.cu -ccbin "$env:VCToolsInstallDir\bin\Hostx64\x64" -O 3 -arch=all --extra-device-vectorization
-
-      - name: Windows - Fake Build Binary
+      - name: Windows - Build Binary
         if: runner.os == 'Windows'
-        run: echo This is a fake executable file for speed > matmul_cuda_windows.exe
+        run: nvcc -o matmul_cuda_windows matmul_cuda.cu -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\MSVC\14.32.31326\bin\HostX64\x64" -O 3 -arch=all --extra-device-vectorization
+        #run: nvcc -o matmul_cuda_windows matmul_cuda.cu -ccbin "$env:VCToolsInstallDir\bin\Hostx64\x64" -O 3 -arch=all --extra-device-vectorization
 
       - name: Windows - Upload Build
         uses: actions/upload-artifact@v3
@@ -77,8 +73,8 @@ jobs:
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
-          prerelease: true
-          title: "Development Build"
+          #prerelease: true
+          title: "Snapshot Build"
           files: |
             /home/runner/work/matmul_cuda/matmul_cuda/matmul_cuda_linux
             /home/runner/work/matmul_cuda/matmul_cuda/matmul_cuda_windows
